Updated celsius conversion. Currently updating to revert back to Far.

--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@ another function to convert kelvin to celsius. I was working on finally hiding/s
 
 
 <h2>Temperature</h2>
-<div class="temp"> </div>
+<div class="temp"></div>
+<div class="justForButton">
+<input type="button" id="clearButton" value="Convert to Celsius" />
+</div>
 <div class="celsius"></div>
 <h2>Humidity</h2>
 <span class="humidity">%</span>
-
-
-<button id="clearButton">Try?</button>
 
 <script
 src="https://code.jquery.com/jquery-3.2.1.js"
